[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nuclear-shelter-location"
version = "0.1.0"
description = "Nuclear shelter location optimization"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "osmnx>=1.3.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.2.0",
    "tqdm>=4.65.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
